--- a/web_reset_password/package.json
+++ b/web_reset_password/package.json
@@ -2,6 +2,11 @@
   "name": "reset-password",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
-  "dependencies": { "express": "^4.18.2" }
+  "scripts": { 
+    "start": "node server.js" },
+  "dependencies": { 
+    "express": "^4.18.2" },
+  "engines": {
+    "node": "18.x"
+  }
 }
